styleguide/_assets/css/views/examples/marketing/index.sass
.hero
  background: linear-gradient(to right bottom, $teal, saturate($blue-dark, 60%))
  position: relative
  +respond-to(padding-top, (x0: 130px, x1: 140px, x2: 150px))
  &::before
    content: ""
    position: absolute
    display: block
    top: 0
    left: 0
    right: 0
    bottom: 0
    background: asset-url("layouts/marketing/hero-pattern.png") no-repeat center
    background-size: cover
    opacity: .25
  &-cut::after
    margin-top: 50px
    content: ""
    position: relative
    display: block
    background: #fff
    clip-path: polygon(100% 0, 0% 100%, 100% 100%)
    +respond-to(height, (x0: 50px, x1: 100px, x2: 150px))
  &-title
    font-size: 34px
    line-height: 1.4
  &-description
    max-width: 500px
  &-btn
    +btn-color($green)
    box-shadow: 0 1px 0 rgba($blue-dark,.15)

.feature
  &-color
    left: 0
    top: 0
    bottom: 0
    width: 4px
  &-arrow
    position: absolute
    right: 20px
    top: 50%
    margin-top: -15px
    +width-height(24px, 24px)

.benefit
  &-container
    box-shadow: 0 2px 0 $border-color-lightest

  &-item
    border-left: 1px solid $border-color-lightest
    padding: 0 30px
    &:first-child
      border-left: none
      padding-left: 15px
    &:last-child
      padding-right: 15px

